[Issue #123] Space name overflow in dropdown menu

--- a/frontend/src/app/components/flashcard-manager/flashcard-manager.component.scss
+++ b/frontend/src/app/components/flashcard-manager/flashcard-manager.component.scss
@@ -34,7 +34,7 @@
   overflow-y: inherit !important;
 }
 
-.deck-name {
+.name-overflow {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
